--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/estilo2.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="grid">
     <header class="header">
